--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: mysql2
-  database: <%= ENV['DB_NAME'] %>
+  adapter: <%= ENV['DB_NAME'].empty? ? 'sqlite3' : 'mysql2' %>
+  database: <%= ENV['DB_NAME'].empty? ? 'db/development.sqlite3' : ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
   password: <%= ENV['DB_PASS'] %>
   pool: <%= ENV['DB_POOL'] %>
