--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -1,19 +1,16 @@
-# HEADER: This file is currently under management
-# HEADER: by puppet.  While it can still be managed manually, it
-# HEADER: is definitely not recommended.
-
 upstream puma {
-  server unix:///tmp/puma.sock;
+  # configure in .env BIND
+  server unix:///tmp/learning-docs.sock;
 }
 
 server {
   listen       80;
-  server_name  sitename.com *.sitename.com;
+  server_name  learning-docs.hauntdigital.co.nz;
 
-  access_log  /var/log/nginx/sitename-web-access;
-  error_log   /var/log/nginx/sitename-web-error;
+  access_log  /var/log/nginx/learning-docs-web-access;
+  error_log   /var/log/nginx/learning-docs-web-error;
 
-  root /var/www/sitename/public;
+  root /var/www/sitename/learning-docs;
 
   location ~ ^/assets/ {
     expires 1y;
@@ -28,9 +25,6 @@ server {
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
 
-    #auth_basic            "Restricted";
-    #auth_basic_user_file  /etc/nginx/sitename.pass;
-
     try_files $uri/index.html $uri.html $uri @rails;
   }
 
@@ -39,3 +33,4 @@ server {
     proxy_set_header Host $http_host;
   }
 }
+
