Updating deployment example

--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -10,12 +10,13 @@ server {
   access_log  /var/log/nginx/learning-docs-web-access;
   error_log   /var/log/nginx/learning-docs-web-error;
 
-  root /var/www/sitename/learning-docs;
+  root /var/www/sitename/learning-docs/public;
 
   location ~ ^/assets/ {
     expires 1y;
     add_header Cache-Control public;
     add_header ETag "";
+
     break;
   }
 
@@ -29,6 +30,8 @@ server {
   }
 
   location @rails {
+    add_header X-Haunted-By admin@hauntdigital.co.nz;
+
     proxy_pass http://puma;
     proxy_set_header Host $http_host;
   }
