--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -1,6 +1,6 @@
 upstream puma {
   # configure in .env BIND
-  server unix:///tmp/learning-docs.sock;
+  server unix:///var/run/learning-docs.sock;
 }
 
 server {
@@ -10,30 +10,30 @@ server {
   access_log  /var/log/nginx/learning-docs-web-access;
   error_log   /var/log/nginx/learning-docs-web-error;
 
-  root /var/www/sitename/learning-docs/public;
+  root /var/www/learning-docs/public;
 
   location ~ ^/assets/ {
     expires 1y;
     add_header Cache-Control public;
     add_header ETag "";
+    add_header X-Haunted-By admin@hauntdigital.co.nz;
 
     break;
   }
 
   location / {
-    # needed to forward user's IP address to rails
-    proxy_set_header  X-Real-IP  $remote_addr;
-    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-
     try_files $uri/index.html $uri.html $uri @rails;
   }
 
   location @rails {
     add_header X-Haunted-By admin@hauntdigital.co.nz;
 
-    proxy_pass http://puma;
+    # needed to forward user's IP address to rails
+    proxy_set_header  X-Real-IP  $remote_addr;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
+
+    proxy_pass http://puma;
   }
 }
 
